force-app/main/default/objects/Support_Settings__c/fields/Default_Queue_Id__c.field-meta.xml
<CustomField>
    <fullName>Default_Queue_Id__c</fullName>
    <label>Default Queue Id</label>
    <type>Text</type>
    <length>18</length>
    <description>Default Queue Id</description>
</CustomField>