force-app/main/default/objects/Support_Settings__c/fields/Enable_Auto_Close__c.field-meta.xml
<CustomField>
    <fullName>Enable_Auto_Close__c</fullName>
    <label>Enable Auto Close</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Enable Auto Close</description>
</CustomField>