force-app/main/default/objects/Support_Settings__c/fields/External_Ticketing_Url__c.field-meta.xml
<CustomField>
    <fullName>External_Ticketing_Url__c</fullName>
    <label>External Ticketing Url</label>
    <type>Url</type>
    <description>External Ticketing Url</description>
</CustomField>